# ACGL

./: .gitignore  .gitmodules  CMakeLists.txt  COPYING.txt  README.md  acgl.pc.in
include/: acgl.h
include/acgl/: common.h  contracts.h  gui.h  gui_safety.h  inputhandler.h  threads.h
src/: gui.c  gui_safety.c  inputhandler.c  threads.c
